--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a href="#postMd">POST request</a>
     <a href="#getEmoji">GET request</a>
     <a href="#wrong">Invalid url</a>
-    <div id="demo"></div>
+    <div id="demo">
+    </div>
 </body>
+<script src="./lib/miniSPA.js"></script>
+<script src="app.js"></script>
 </html>
