--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onhashchange="miniSPA.changeUrl()">
     <h1>测试</h1>
     <a href="#home">Home</a>
-    <a href="#postMd">POST request</a>
+    <a href="#postMD">POST request</a>
     <a href="#getEmoji">GET request</a>
     <a href="#wrong">Invalid url</a>
     <div id="demo">
