--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     </div>
 </body>
 <script src="./lib/miniSPA.js"></script>
+<script src="./app/getEmojiController.js"></script>
+<script src="./app/postMDController.js"></script>
 <script src="app.js"></script>
 </html>
